# TestTask

./: .gitignore  Makefile  README.md
backend/: conftest.py  pyproject.toml  requirements.txt
backend/api/: app.py  main.py
backend/api/routers/: __init__.py
backend/api/routers/about/: endpoints.py  response_examples.py
backend/api/routers/healthcheck/: endpoints.py  response_examples.py
backend/api/routers/person/: endpoints.py
backend/api/routers/person/models/: request_models.py  response_models.py
backend/api/routers/person/swagger_examples/: request_examples.py  response_examples.py
backend/api/tests/routers/person/: test_create_person.py  test_delete_person.py  test_get_person.py
backend/database/postgres/: __init__.py  config.py  person_models.py  session.py
backend/loguru_logger/: gunicorn_patch.py  log_config.py  log_decorator.py  logger_setup.py
deployment/: Makefile  docker-compose.yaml
deployment/dockerfiles/: backend.dockerfile  backend.dockerfile.dockerignore
deployment/entrypoints/: backend_entrypoint.sh
